tdf#116570 ww8 export: skip sectionbreak for footnotes

An extra CR was added at the start of each footnote. I'm guessing
these documents started life as "end of document" footnotes in Word.

SectionBreaksAndFrames is only used by .doc, so
this will not affect .docx and .rtf (which are both fine anyway).

I forgot that I recently fixed the same problem for endnotes
in tdf#108448. Nice to have found example footnote documents also.

Change-Id: Ib496e02d9ff46dbc2337a6d3dfe164a625b09a83
Reviewed-on: https://gerrit.libreoffice.org/51771
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>